# Game

./: CMakeLists.txt  main.cpp
hdr/: core.h
src/: core.cpp  main.cpp
